add bootstrap js to footer for navbar collapse

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,7 +14,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse float-right justify-content-end" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
         {%- for entry in site.data.navigation -%}
 
