footer, separate scripts, and home template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
 		<div class="container">
 			{{ content }}
 		</div>
-		<footer>
-			{% include footer.html %}
-		</footer>
+		{% include footer.html %}
+		{% include scripts.html %}
 	</body>
 </html>
