--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,7 @@
 	<body class="pt-0">
 		{% include navigation.html %}
 		{{ content }}
-		<footer>
-			{% include footer.html %}
-		</footer>
+		{% include footer.html %}
+		{% include scripts.html %}
 	</body>
 </html>
