--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,67 @@
-<!-- include jQuery and Popper.js (both required for Bootstrap 4) and the theme JS file -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="http://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
-<script src="{{ site.assets }}/js/bootstrap/bootstrap.js"></script>
-<script src="{{ site.assets }}/js/spacial.js"></script>
-<script src="{{ site.assets }}/js/switch.js"></script>
+<footer class="footer mt-0" id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="title">
+          About Switch~
+        </div>
+        <ul class="menu">
+          <li>
+            <a href="#">Here</a>
+          </li>
+          <li>
+            <a href="#">Are</a>
+          </li>
+          <li>
+            <a href="#">Some</a>
+          </li>
+          <li>
+            <a href="#">Links</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <div class="title">
+          Connect with us
+        </div>
+        <ul class="menu">
+          <li>
+            <a href="#">
+              <i class="fa fa-facebook"></i>
+              Facebook
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-instagram"></i>
+              Instagram
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-twitter"></i>
+              Twitter
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4 newsletter">
+        <div class="title">
+          Get Updates
+        </div>
+        <p>
+          Enter your email address to sign up for our newsletter.
+        </p>
+
+        <form class="newsletter-form" autocomplete="off">
+          <input type="email" id="mc-email" class="form-control" placeholder="Email address" required />
+
+          <button type="submit">
+            <i class="fa fa-chevron-right"></i>
+          </button>
+          <label for="mc-email" class="text-white newsletter-feedback mt-3"></label>
+        </form>
+      </div>
+    </div>
+  </div>
+</footer>
