--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-0" id="footer">
+<footer class="footer" id="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
