styling for social icons in ensemble listing

--- a/assets/css/switch.scss
+++ b/assets/css/switch.scss
@@ -16,3 +16,9 @@ body {
 .mixitup-rep .rep {
 	display: none;
 }
+p.social a {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #fff;
+  font-size: 1.25rem;
+}
