--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 	<head>
 		{% include head.html %}
 	</head>
-	<body>
+	<body class="{%- if page.title == 'Home' -%}pt-0{% endif %}">
 		{% include navigation.html %}
-		<div class="container">
+		<div class="{%- if page.title == 'Home' -%}{%- else -%}container{% endif %}">
 			{{ content }}
 		</div>
 		{% include footer.html %}
