remove bottom border

--- a/_includes/donors.html
+++ b/_includes/donors.html
@@ -21,7 +21,7 @@
 {% endcomment %}
 
 <!-- Accordions-->
-<section class="module module-divider-bottom">
+<section class="module">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-9 m-auto">
