--- a/_includes/donor-scroller.html
+++ b/_includes/donor-scroller.html
@@ -2,6 +2,7 @@
 
 <section class="module-sm module-gray">
 	<div class="container">
+		<h3 class="text-center">Sponsors 2015-2017</h3>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="owl-carousel clients-carousel">
