--- a/_includes/donors.html
+++ b/_includes/donors.html
@@ -23,6 +23,7 @@
 <!-- Accordions-->
 <section class="module">
 	<div class="container">
+		<h3 class="text-center">Current Donors</h3>
 		<div class="row">
 			<div class="col-md-9 m-auto">
 				<!-- Accordion card-body-->
