comment out module background color

--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -22,10 +22,10 @@
   background: #fff;
 }
 
-.module, .module-sm {
+/*.module, .module-sm {
   background-color: #fff;
   padding: 50px 0;
-}
+}*/
 
 .filters>li {
   margin: 10px 15px;
