change comment enclosure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,11 @@
 		</div>
 		<!-- Layout end-->
 
-		<!-- Off canvas-->
-		{% comment %}
-		{% include off-canvas-sidebar.html %}
-		{% endcomment %}
-		<!-- Off canvas end-->
+		{%- comment -%}
+			<!-- Off canvas-->
+			{% include off-canvas-sidebar.html %}
+			<!-- Off canvas end-->
+		{%- endcomment -%}
 
 		<!-- Scripts -->
 		{% include scripts.html %}
