--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,15 +1,29 @@
 ---
 layout: default
 ---
-<!-- Page Header-->
-<section class="module-page-title">
-  <div class="container">
-    <div class="row-page-title">
-      <h1 class="h5 text-center">{{ page.title }}</h1>
+{%- if page.headerImage -%}
+  <!-- Page Header-->
+  <section class="module-header parallax bg-dark bg-dark-60" data-background="{{ site.assets }}/images/module-17.jpg">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-md-12">
+  				<h1 class="h1 m-b-20">{{ page.title }}</h1>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+  <!-- Page Header end-->
+{%- else -%}
+  <!-- Page Header-->
+  <section class="module-page-title">
+    <div class="container">
+      <div class="row-page-title">
+        <h1 class="h5 text-center">{{ page.title }}</h1>
+      </div>
     </div>
-  </div>
-</section>
-<!-- Page Header end-->
+  </section>
+  <!-- Page Header end-->
+{%- endif -%}
 
 <!-- Module -->
 <section class="module module-divider-bottom">
@@ -20,7 +34,3 @@ layout: default
   </div>
 </section>
 <!-- Module end-->
-
-{%- if page.url contains 'support' -%}
-  {%- include donor-scroller.html -%}
-{%- endif -%}
