update {{site.assets}}/images to {{site.images}}

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <!-- Logos-->
     <div class="inner-header">
       <a class="inner-brand" href="/">
-        <img class="brand-dark" src="{{ site.assets }}/images/switch-white-icon.png" height="30" width="36" alt="[~]">
-        <img class="brand-light" src="{{ site.assets }}/images/switch-white-icon.png" height="30" width="36" alt="[~]">
+        <img class="brand-dark" src="{{ site.images }}/switch-white-icon.png" height="30" width="36" alt="[~]">
+        <img class="brand-light" src="{{ site.images }}/switch-white-icon.png" height="30" width="36" alt="[~]">
       </a></div>
     <!-- Navigation-->
     {%- comment -%}
