--- a/_layouts/ensemble-member.html
+++ b/_layouts/ensemble-member.html
@@ -7,7 +7,7 @@ layout: page
       <div class="container">
         <div class="row mt-5">
           <div class="col-md-6 pl-5 pr-5 text-center" >
-            <img class="mb-4 img-fluid" src="{{ site.assets }}/images/ensemble/{{ person.headshot }}"  alt="{{ person.name | append: Headshot}}">
+            <img class="mb-4 img-fluid" src="{{ site.images }}/ensemble/{{ person.headshot }}"  alt="{{ person.name | append: Headshot}}">
           </div>
           <div class="col-md-6" >
             <h2 class="text-center text-md-left">{{ person.name }}</h2>
