--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {%- if page.headerImage -%}
   <!-- Page Header-->
-  <section class="module-header parallax bg-dark bg-dark-60" data-background="{{ site.assets }}/images/module-17.jpg">
+  <section class="module-header parallax bg-dark bg-dark-60" data-background="{{ site.images }}/module-17.jpg">
   	<div class="container">
   		<div class="row">
   			<div class="col-md-12">
