--- a/_includes/ensemble-listing.html
+++ b/_includes/ensemble-listing.html
@@ -8,7 +8,7 @@
   {%- for person in site.data.members -%}
     <div class="col-sm-6 col-md-4">
       <div class="team-item m-b-30">
-        <div class="team-image"><img src="{{ site.assets }}/images/ensemble/{{ person.headshot }}" alt="">
+        <div class="team-image"><img src="{{ site.images }}/ensemble/{{ person.headshot }}" alt="">
           <div class="team-content">
             <h5>{{ person.name }}</h5>
             {%- if person.title -%}<p>{{ person.title }}</p>{%- endif -%}
