center align all header sizes

--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -41,3 +41,7 @@
   margin-top: -150px; /* Give negative margin of your fixed element */
   visibility: hidden;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
