--- a/_includes/ensemble-listing.html
+++ b/_includes/ensemble-listing.html
@@ -2,7 +2,7 @@
 <div class="row m-b-100">
   <div class="col-md-12">
     <div class="special-heading text-center">
-      <h2 id="musicians" class="offset">Musicians</h2>
+      <h2 class="mt-5"><a class="offset" id="musicians">Musicians</a></h2>
     </div>
   </div>
   {%- for person in site.data.members -%}
