--- a/_includes/prize-announcement.html
+++ b/_includes/prize-announcement.html
@@ -24,7 +24,7 @@
     <div class="col-12">
       <h3>Runner Up: {{ person.name }}</h3>
       <div class="row">
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 text-center text-md-left">
           <img class="pb-3" src="{{ site.images }}/{{ person.headshot }}" alt="">
         </div>
         <div class="col-12 col-md-9">
@@ -49,7 +49,7 @@
       <div class="col-12 mb-5">
         <h3>{{ person.name }}</h3>
         <div class="row">
-          <div class="col-12 col-md-3">
+          <div class="col-12 col-md-3 text-center text-md-left">
             <img class="pb-3" src="{{ site.images }}/{{ person.headshot }}" alt="">
           </div>
           <div class="col-12 col-md-9">
