--- a/_includes/prize-announcement.html
+++ b/_includes/prize-announcement.html
@@ -68,7 +68,7 @@
   </div>
 </div>
 
-<!--
+{% comment %}
     <div class="col-12 mb-5">
       <h4>Victor Ibarra</h4>
       <div class="row">
@@ -165,4 +165,5 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
+{% endcomment %}
