--- a/_includes/home-latest-performances.html
+++ b/_includes/home-latest-performances.html
@@ -1,6 +1,6 @@
 <div class="latest-performance">
 	{% assign performancePosts = site.posts | where_exp:"item", "item.categories contains 'performance'" %}
-	{%- for post in performancePosts -%}
+	{%- for post in performancePosts limit:1 -%}
 		<span><strong>{{ post.date | date_to_long_string }}, {{ post.venue }}</strong>. {{ post.excerpt | remove: '<p>' | remove: '</p>' }} <a href="{{ post.url }}"><i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></a></span>
 	{% endfor %}
 </div>
