remove margin top

--- a/_includes/ensemble-listing.html
+++ b/_includes/ensemble-listing.html
@@ -1,7 +1,7 @@
 <!-- Ensemble listing -->
 <div class="row m-b-100">
   <div class="col-md-12">
-    <h2 class="text-center mt-5"><a class="offset" id="musicians">Musicians</a></h2>
+    <h2 class="text-center"><a class="offset" id="musicians">Musicians</a></h2>
   </div>
   {%- for person in site.data.members -%}
     <div class="col-sm-6 col-md-4">
