--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -58,3 +58,14 @@ h1, h2, h3, h4, h5, h6 {
 	height: 100px;
   margin-top: -100px;
 }
+
+@media (max-width: 991px) {
+  .offset:before {
+    display: block;
+    position: relative;
+   	content: "";
+    width: 0;
+  	height: 100px;
+    margin-top: -100px;
+  }
+}
