--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -50,6 +50,9 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 40px;
 }
 
+/*
+   SPECIALTY
+*/
 .offset:before {
   display: block;
   position: relative;
@@ -58,7 +61,6 @@ h1, h2, h3, h4, h5, h6 {
 	height: 100px;
   margin-top: -100px;
 }
-
 @media (max-width: 991px) {
   .offset:before {
     display: block;
