working google maps if lat and long are in front matter

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,10 +2,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="{{ site.assets }}/bootstrap/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
-<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
+<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAu61iN7No_19C3dRDoUD_3kOBuGv3JfVs"></script>
 <script src="{{ site.assets }}/js/plugins.min.js"></script>
 <script src="{{ site.assets }}/js/charts.js"></script>
 <script src="{{ site.assets }}/js/custom.min.js"></script>
+
+<script src="{{ site.assets }}/js/maps.js"></script>
 
 <!-- Color Switcher (Remove these lines)-->
 <!-- <script src="{{ site.assets }}/js/style-switcher.min.js"></script> -->
