--- a/_layouts/concert.html
+++ b/_layouts/concert.html
@@ -39,10 +39,43 @@ layout: default
   <!-- Page Header end-->
 {%- endif -%}
 
-<div class="mapping">
+<!-- <div class="mapping">
   <div class="map-canvas" id="map-event"></div>
   <div class="map-point" address="{{ page.address }}, {{ page.city }}, {{ page.state }}" {% if page.latitude %}latitude="{{ page.latitude }}" longitude="{{ page.longitude }}"{%- endif -%}></div>
+</div> -->
+
+<div id="inputs">
+  <input id="address" type="textbox" value="2313 Dragonfly Lane North Chesterfield, VA 23235">
+  <input id="submit" type="button" value="Geocode">
 </div>
+<div class="maps-container">
+  <div id="map"></div>
+</div>
+<script>
+  function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: {lat: -34.397, lng: 150.644}
+        });
+        var geocoder = new google.maps.Geocoder();
+          geocodeAddress(geocoder, map);
+      }
+
+      function geocodeAddress(geocoder, resultsMap) {
+        var address = document.getElementById('address').value;
+        geocoder.geocode({'address': address}, function(results, status) {
+          if (status === 'OK') {
+            resultsMap.setCenter(results[0].geometry.location);
+            var marker = new google.maps.Marker({
+              map: resultsMap,
+              position: results[0].geometry.location
+            });
+          } else {
+            alert('Geocode was not successful for the following reason: ' + status);
+          }
+        });
+      }
+</script>
 
 <!-- Module -->
 <section class="module module-divider-bottom">
