google maps working for concert pages!

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,7 +6,7 @@
 <script src="{{ site.assets }}/js/plugins.min.js"></script>
 <script src="{{ site.assets }}/js/charts.js"></script>
 <script src="{{ site.assets }}/js/custom.min.js"></script>
-<!-- <script src="{{ site.assets }}/js/maps.js"></script> -->
+<script src="{{ site.assets }}/js/map.js"></script>
 
 <!-- Color Switcher (Remove these lines)-->
 <!-- <script src="{{ site.assets }}/js/style-switcher.min.js"></script> -->
