--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -72,13 +72,13 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.map-canvas {
-  height: 300px;
-}
+/*
+   GOOGLE MAPS API FOR CONCERTS
+*/
 .maps-container {
   height: 300px;
 }
-#map {
+#map-canvas {
   height: 100%;
 }
 #inputs {
