https google maps api and comment charts js

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,8 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="{{ site.assets }}/bootstrap/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
-<script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAu61iN7No_19C3dRDoUD_3kOBuGv3JfVs"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu61iN7No_19C3dRDoUD_3kOBuGv3JfVs" async defer></script>
 <script src="{{ site.assets }}/js/plugins.min.js"></script>
 <script src="{{ site.assets }}/js/charts.js"></script>
 <script src="{{ site.assets }}/js/custom.min.js"></script>
