--- a/_includes/donors.html
+++ b/_includes/donors.html
@@ -25,7 +25,7 @@
 	<div class="container">
 		<h3 class="text-center">Current Donors</h3>
 		<div class="row">
-			<div class="col-md-9 m-auto">
+			<div class="col-12 m-auto">
 				<!-- Accordion card-body-->
 				<div class="accordion panel-group" id="accordion">
           {%- for listing in site.data.donors -%}
