adjust icon margins

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <h5>Contact</h5>
           </div>
             <p>Get in touch. We would love to hear from you.</p>
-            <div class="col-md-6 px-0">
+            <div class="col-md-6 mx-auto">
               <div class="d-flex justify-content-between">
                 <a href="mailto:switchensemble@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com/SwitchEnsemble/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
