photos portfolio includes now has folderName variable

--- a/_includes/photos-portfolio.html
+++ b/_includes/photos-portfolio.html
@@ -4,14 +4,16 @@
 		<div class="row row-portfolio" data-columns="3">
 			<div class="grid-sizer"></div>
 			{%- for image in image_files -%}
-				<div class="portfolio-item p-1">
-					<div class="portfolio-wrapper">
-						<img src="{{ image.path }}" alt="{{ image.basename }}">
-						<!-- <div class="portfolio-overlay"></div> -->
-						<!-- <div class="portfolio-caption"><h5 class="portfolio-title">Mutualismi</h5></div> -->
-						<a class="portfolio-link" href="{{ image.path }}"></a>
+				{%- if image.path contains include.folderName -%}
+					<div class="portfolio-item p-1">
+						<div class="portfolio-wrapper">
+							<img src="{{ image.path }}" alt="{{ image.basename }}">
+							<!-- <div class="portfolio-overlay"></div> -->
+							<!-- <div class="portfolio-caption"><h5 class="portfolio-title">Title Goes Here</h5></div> -->
+							<a class="portfolio-link" href="{{ image.path }}"></a>
+						</div>
 					</div>
-				</div>
+				{%- endif -%}
 			{%- endfor -%}
 		</div>
 	</div>
