test if page title exists

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
   	</div>
   </section>
   <!-- Page Header end-->
-{%- else -%}
+{%- elsif page.title -%}
   <!-- Page Header-->
   <section class="module-page-title">
     <div class="container">
