left align headers in portfolio listing

--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -39,6 +39,12 @@ body {
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
+h2.single-portfolio-title {
+    text-align: left;
+}
+.portfoli-details li>h5 {
+    text-align: left;
+}
 
 /*
    REPERTOIRE
