--- a/_layouts/concert.html
+++ b/_layouts/concert.html
@@ -19,52 +19,129 @@ layout: default
 </section>
 <!-- Page Header end-->
 
+<!-- Google maps image-->
 <div id="inputs">
   <input id="address" type="textbox" value="{{ page.location.address }}, {{ page.location.city }}, {{ page.location.state }}">
 </div>
 <div class="maps-container">
   <div id="map-canvas"></div>
 </div>
+<!-- Google maps image end-->
 
-<!-- Module -->
-<section class="module module-divider-bottom">
-  <div class="container">
+<!-- Portfolio-->
+<section class="module">
+	<div class="container">
 		<div class="row">
-		  <div class="col-md-5">
-		    <div class="portfolio-content">
-		      <div class="image-slider owl-carousel">
-            <img class="img-fluid mb-3 mb-md-0" src="https://placeholdit.co//i/500x250?bg=282F37" alt="">
-		      </div>
-		    </div>
-		  </div>
-		  <div class="col-md-7">
-		    <div class="portfolio-sidebar pt-0">
-		      <h3 class="single-portfolio-title text-md-left">{{ page.date | date_to_long_string }}</h3>
-		          {%- if page.event -%}<h3 class="single-portfolio-title text-md-left">{{ page.event }}</h3>{%- endif -%}
-		          <p class="text-center text-md-left">
-		            {%- if page.location.institution -%}{{ page.location.institution }}<br />{%- endif -%}
-		            {%- if page.location.building -%}{{ page.location.building }}<br />{%- endif -%}
-		            {%- if page.location.venue -%}{{ page.location.venue }}<br />{%- endif -%}
-		            {%- if page.location.address -%}{{ page.location.address }}<br />{%- endif -%}
-		            {%- if page.location.country -%}
-		              {{ page.location.city }}, {{ page.location.country }}
-		            {%- else -%}
-		              {{ page.location.city }}, {{ page.location.state }} {{ page.location.zip }}
-		            {%- endif -%}
-		          </p>
-		      <div class="portfoli-details">
-            {%- for work in page.program -%}
-              <p class="mb-0">
-                <span class="font-weight-bold text-uppercase">{{ work.composer }}</span>
-                <span class="font-italic">{{ work.title }}</span>
-              </p>
-            {%- endfor -%}
+			<div class="col-lg-8">
+        <h2 class="single-portfolio-title">
+          {%- if page.event -%}
+            Performance at {{ page.event }}
+          {%- elsif page.location.institution -%}
+            Performance at {{ page.location.institution }}
+          {%- else page.location.venue -%}
+            Performance at {{ page.location.venue }}
+          {%- endif -%}
+        </h2>
+        <div class="concert-program mb-3">
+          {%- for work in page.program -%}
+            <div class="row">
+              <div class="col-4 font-weight-bold text-uppercase">{{ work.composer }}</div>
+              <div class="col-8 font-italic">{{ work.title }}</div>
+            </div>
+          {%- endfor -%}
+        </div>
 
-		          {{ content }}
-		      </div>
-		    </div>
-		  </div>
-		</div>
+        {{ content }}
+
+      </div>
+			<div class="col-lg-4">
+				<div class="portfoli-details border-left">
+					<ul>
+						<li>
+							<h5>Date:</h5>
+              {{ page.date | date_to_long_string }}
+						</li>
+            {%- if page.event -%}
+              <li>
+                <h5>Event:</h5>
+                {{ page.event }}
+              </li>
+            {%- endif -%}
+            {%- if page.time -%}
+              <li>
+                <h5>Time:</h5>
+                {{ page.time }}
+              </li>
+            {%- endif -%}
+						<li>
+							<h5>Location:</h5>
+              {%- if page.location.institution -%}{{ page.location.institution }}<br />{%- endif -%}
+              {%- if page.location.building -%}{{ page.location.building }}<br />{%- endif -%}
+              {%- if page.location.venue -%}{{ page.location.venue }}<br />{%- endif -%}
+              {%- if page.location.address -%}{{ page.location.address }}<br />{%- endif -%}
+              {%- if page.location.country -%}
+                {{ page.location.city }}, {{ page.location.country }}
+              {%- else -%}
+                {{ page.location.city }}, {{ page.location.state }} {{ page.location.zip }}
+              {%- endif -%}
+						</li>
+						<li>
+							<h5>Share:</h5>
+							<ul class="social-icons">
+								<li><a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter }}&related={{ site.twitter }}" rel="nofollow" target="_blank" title="Share on Twitter"><i class="fa fa-twitter"></i></a></li>
+								<a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+"><i class="fa fa-google-plus"></i></a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+    </div>
+	</div>
+</section>
+<!-- Portfolio end-->
+
+{%- if page.photosFolder -%}
+<!-- Gallery-->
+<section class="module module-gray">
+  <div class="container">
+    <div class="row m-b-50">
+      <div class="col-md-12">
+        <h2 class="single-portfolio-title">
+          Photos from the Performance
+        </h2>
+        {% include photos-portfolio-masonry.html folderName=page.photosFolder %}
+      </div>
+    </div>
   </div>
 </section>
-<!-- Module end-->
+<!-- Gallery end-->
+{%- endif -%}
+
+<!-- Performance Pagination-->
+<section class="module module-divider-top">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h4 class="text-uppercase text-center m-b-50">More Performances</h4>
+			</div>
+		</div>
+    <!--
+    <div class="row">
+      <div class="pagination">
+        {% if paginator.previous_page %}
+          <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+        {% else %}
+          <span class="previous">Previous</span>
+        {% endif %}
+        <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+        {% if paginator.next_page %}
+          <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+        {% else %}
+          <span class="next ">Next</span>
+        {% endif %}
+      </div>
+    -->
+    </div>
+  </div>
+</section>
