added js for switch site and audio player

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,6 +7,8 @@
 <script src="{{ site.assets }}/js/charts.js"></script>
 <script src="{{ site.assets }}/js/custom.min.js"></script>
 <script src="{{ site.assets }}/js/map.js"></script>
+<script src="{{ site.assets }}/js/audiojs/audio.min.js"></script>
+<script src="{{ site.assets }}/js/switch.js"></script>
 
 <!-- Color Switcher (Remove these lines)-->
 <!-- <script src="{{ site.assets }}/js/style-switcher.min.js"></script> -->
